test/patterns/s0888_fair_candy_swap/hafis/starchat/jml_syntax_checking.txt
./test/s0888_fair_candy_swap/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < bobSizes.length; ((bobSizes <= 100000) && (bobSizes >= 1)));
                                                                 ^
  first type:  int[]
  second type: int
./test/s0888_fair_candy_swap/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < bobSizes.length; ((bobSizes <= 100000) && (bobSizes >= 1)));
                                                                                         ^
  first type:  int[]
  second type: int
./test/s0888_fair_candy_swap/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < aliceSizes.length; ((aliceSizes <= 100000) && (aliceSizes >= 1)));
                                                                     ^
  first type:  int[]
  second type: int
./test/s0888_fair_candy_swap/hafis/starchat/Solution.java:14: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < aliceSizes.length; ((aliceSizes <= 100000) && (aliceSizes >= 1)));
                                                                                               ^
  first type:  int[]
  second type: int
4 errors
